// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearAll has a disabled mode 1`] = `
<button
  className="button button--disabled"
  disabled={true}
  onClick={[Function]}
>
  Clear all filters
</button>
`;

exports[`ClearAll renders a clickable button 1`] = `
<button
  className="button false"
  disabled={false}
  onClick={[Function]}
>
  Clear all filters
</button>
`;
